# CHAD_Processing_Unit

./: CMakeLists.txt  CV2_install_depencies.sh  Camera.cpp  Camera.hpp  Display.hpp  FrameProcessor.cpp  FrameProcessor.hpp  Interface.hpp  README.md  config.txt  config.yaml  main.cpp  web_display.html
libraries/: Camera.cpp  Camera.hpp  Display.cpp  FrameProcessor.cpp  FrameProcessor.hpp  Interface.cpp  Interface.hpp  Parameters.cpp  Parameters.hpp  utilitaries.cpp
